# composition

./: .gitignore  .pylintrc  README.md  project.json.example  pyproject.toml
backend/: agent_processing.py  agents.py  chunk_files.py  context_retrieval.py  csv.py  embed_chunks.py  embedding_types.py  main.py  openai.py  project.py  project_types.py  prompt_template.py  read_files.py  update_embeddings.py  watchfiles.py
backend/embedding/: csv.py  update_embeddings.py
backend/eval/: evaluate_context.py  run_eval.py
backend/templates/: basic.md
backend/tests/: test_watchfiles.py
composition-frontend/: package-lock.json  package.json
docs/: composition.example.json  data-structures.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: chat-box.tsx
frontend/app/services/: backend.ts
