[tool.poetry]
name = "composition-backend"
version = "0.1.0"
description = ""
authors = ["Sid Shanker <sid.shanker@baseten.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103"
uvicorn = "^0.23"
python-dotenv = "^1.0"
openai        = "^0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
