[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sid Shanker <sid.shanker@baseten.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.103"
uvicorn = "^0.23"
python-dotenv = "^1.0"
openai        = "^0.28"
pathspec = "^0.11.2"
langchain = "^0.0.304"
argparse = "^1.4.0"
tenacity = "^8.2.3"
scipy = "^1.11.3"
mypy = "^1.5.1"

[tool.poetry.scripts]
sync-embeddings = "backend.embedding.update_embeddings:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.6"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
